--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "repository": "",
   "author": "",
   "dependencies": {
+    "cheerio": "^0.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.4",
+    "request": "^2.88.2",
     "validator": "^13.1.1"
   },
   "devDependencies": {
