--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cheerio": "^0.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.4",
     "request": "^2.88.2",
