--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
   "author": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
     "cheerio": "^0.20.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.4.1",
     "mongoose": "^5.8.4",
+    "nodemailer": "^6.4.11",
+    "nodemailer-express-handlebars": "^4.0.0",
+    "path": "^0.12.7",
     "request": "^2.88.2",
     "validator": "^13.1.1"
   },
